  * Added MemberInfo extension method CreateMemberAccessLambda()
  * Added Clear(), Reset(), AddCallSite(), and AddExtendedCallSite() to Breadcrumbs
  * Added ReadOnlyCollection, ReadOnlyList, and ReadOnlyDictionary implementations that are  truly immutable
  * Updated Collection/List/Dictionary EmptyReadOnly<T>() so the underlying collection is truly immutable


AllOverIt.DependencyInjection
  * Updated to reference Microsoft.Extensions.DependencyInjection.Abstractions instead of Microsoft.Extensions.DependencyInjection


AllOverIt.Pagination
  * New package to provide keyset based pagination for any IQueryable, including EF queries

AllOverIt.Fixture
AllOverIt.Fixture.FakeItEasy
  * Updated to FluentAssertions v6.7.0


12 May 2022
Version 5.6.0
======================================================================================================================
AllOverIt
  * Added NotAny() as an IEnumerable extension
  * Minor performance improvement to ObjectPropertySerializer.SerializeToDictionary() when the input is already a
    dictionary<string, string>.
  * ObjectPropertySerializer now supports serialization of a root-level collection of primitives (not a property)
    when value collation is enabled ("[]" is used as the dictionary key).
  * Added a Breadcrumbs collection that can be used to capture diagnostic/trace information. Can be configured for
    multi-thread access if required.
  * Added a BreadcrumbsFactory to conveniently create new instances on demand to emulate scoping.


09 May 2022
Version 5.5.0 / 5.5.1
======================================================================================================================
AllOverIt.Serialization
  * Added missing TryGetValues() and GetValues() on JsonHelperBase


09 May 2022
Version 5.5.0
======================================================================================================================
AllOverIt
  * Added IsNotNullOrEmpty() to string extensions

AllOverIt.Validation