@@ -223,6 +223,8 @@ Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "MemoryPaginationDemo", "Dem
 EndProject
 Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "PaginationConsole", "Demos\AllOverIt.EntityFrameworkCore\KeysetPaginationDemo\PaginationConsole\PaginationConsole.csproj", "{A2DC84B5-1169-45A1-9971-1E41FF5943E9}"
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "AllOverIt.EntityFrameworkCore.Pagination", "Source\AllOverIt.EntityFrameworkCore.Pagination\AllOverIt.EntityFrameworkCore.Pagination.csproj", "{F326CA08-F70C-4B87-8B33-56A86A1BBD8A}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Any CPU = Debug|Any CPU
@@ -533,6 +535,10 @@ Global
 		{A2DC84B5-1169-45A1-9971-1E41FF5943E9}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{A2DC84B5-1169-45A1-9971-1E41FF5943E9}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{A2DC84B5-1169-45A1-9971-1E41FF5943E9}.Release|Any CPU.Build.0 = Release|Any CPU
+		{F326CA08-F70C-4B87-8B33-56A86A1BBD8A}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{F326CA08-F70C-4B87-8B33-56A86A1BBD8A}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{F326CA08-F70C-4B87-8B33-56A86A1BBD8A}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{F326CA08-F70C-4B87-8B33-56A86A1BBD8A}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
@@ -641,6 +647,7 @@ Global
 		{FB7E848C-C503-4835-A323-1FCF3E72AB71} = {0DC79E13-DE7A-417D-8A7B-64ABA3F4E1C8}
 		{98398A4A-A1D5-49D5-918A-B3AF9CE122AE} = {FB7E848C-C503-4835-A323-1FCF3E72AB71}
 		{A2DC84B5-1169-45A1-9971-1E41FF5943E9} = {FF30E74E-0317-4439-9327-A0BB72B230D0}
+		{F326CA08-F70C-4B87-8B33-56A86A1BBD8A} = {FC8E8DB2-1299-44F4-A233-0EDCE225BB8C}
 	EndGlobalSection
 	GlobalSection(ExtensibilityGlobals) = postSolution
 		SolutionGuid = {19DD11B3-596E-4862-B5C4-1FFFFB173106}
