@@ -133,4 +133,12 @@
                                                  - [16]
         - External dependencies:                 - None
 
+  [19] AllOverIt.EntityFrameworkCore.Pagination
+        - Targets                                - netstandard2.0;netstandard2.1;netcoreapp3.1;net5.0;net6.0
+        - AllOverIt dependencies:                - [1]
+                                                 - [16]
+                                                 - [13]
+        - External dependencies:                 - Microsoft.EntityFrameworkCore.Relational v5.0.13 for targets netcoreapp3.1;net5.0
+                                                                                            v6.0.4 for targets net6.0
+
 =====================================================================================================================================================================
