@@ -1,6 +1,6 @@
 ﻿namespace KeysetPaginationConsole
 {
-    public static class DatabaseProvider
+    public static class DatabaseStartupOptions
     {
         public static bool RecreateData { get; set; }
         public static DatabaseChoice Use { get; set; }
