@@ -1,0 +1,24 @@
+<Project Sdk="Microsoft.NET.Sdk">
+
+    <PropertyGroup>
+        <TargetFrameworks>netcoreapp3.1;netstandard2.1;net5.0;net6.0</TargetFrameworks>
+        <LangVersion>Latest</LangVersion>
+        <Version>5.6.0</Version>
+        <Authors>Malcolm Smith</Authors>
+        <Company></Company>
+        <Copyright>Copyright © 2021</Copyright>
+        <Description>A library providing pagination utilities for use with Entity Framework Core.</Description>
+        <PackageTags>utilities</PackageTags>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/mjfreelancing/AllOverIt</RepositoryUrl>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\AllOverIt.EntityFrameworkCore\AllOverIt.EntityFrameworkCore.csproj" />
+        <ProjectReference Include="..\AllOverIt.Pagination\AllOverIt.Pagination.csproj" />
+    </ItemGroup>
+
+</Project>
